--- a/mission-02/login.html
+++ b/mission-02/login.html
@@ -14,16 +14,17 @@
       <form action="">
         <section class="form_input_container">
           <div class="form_input_wrapper">
-            <label for="">아이디</label>
-            <input type="id" />
+            <label for="test">아이디</label>
+            <input id="test" type="email" placeholder="이메일주소" required />
           </div>
           <div class="form_input_wrapper">
-            <label for="">비밀번호</label>
-            <input type="password" />
+            <label for="test2">비밀번호</label>
+            <input id="test2" type="password" placeholder="비밀번호" required />
           </div>
         </section>
-        <div class="forn_button_container">
+        <div class="form_button_container">
           <input type="button" value="로그인" />
+          <!-- 버튼이 더 나은 듯 -->
         </div>
         <div class="form_link_wrapper">
           <ul>
